--- a/src/pages/albums/2020-10-20-my-room.md
+++ b/src/pages/albums/2020-10-20-my-room.md
@@ -3,8 +3,7 @@ templateKey: album-post
 title: My Room
 date: 2020-10-20T19:13:13.920Z
 description: My room growing up before I cleaned it all up.
-featuredimage:
-  - https://res.cloudinary.com/dkemko1lp/image/upload/v1603219994/room/WIN_20201013_20_19_22_Pro_vzn50b.jpg
+featuredimage: https://res.cloudinary.com/dkemko1lp/image/upload/v1603219994/room/WIN_20201013_20_19_22_Pro_vzn50b.jpg
 location: '{"type":"Point","coordinates":[-122.6322902,48.4830195]}'
 photos:
   - https://res.cloudinary.com/dkemko1lp/image/upload/v1603219995/room/WIN_20201013_20_18_51_Pro_eirvcy.jpg
